<resources>
    <string name="app_name">[NEW] Aplikasi Klasifikasi Status Gizi Balita</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_testing">Data Testing</string>
    <string name="menu_training">Data Training</string>
    <string name="menu_riwayat_testing">Riwayat Testing</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_about">About</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_data_testing">Data Testing</string>

    <string-array name="jenis_kelamin">
        <item>L</item>
        <item>P</item>
    </string-array>

    <string-array name="status_gizi">
        <item>Sangat Kurus</item>
        <item>Kurus</item>
        <item>Normal</item>
        <item>Gemuk</item>
    </string-array>

</resources>
