<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_testing">

    <fragment
        android:id="@+id/nav_testing"
        android:name="com.example.tesloginnavigationdrawer.ui.testing.TestingFragment"
        android:label="@string/menu_testing"
        tools:layout="@layout/fragment_testing" />

    <fragment
        android:id="@+id/nav_training"
        android:name="com.example.tesloginnavigationdrawer.ui.training.TrainingFragment"
        android:label="@string/menu_training"
        tools:layout="@layout/fragment_training" />

    <fragment
        android:id="@+id/nav_riwayat"
        android:name="com.example.tesloginnavigationdrawer.ui.riwayat.RiwayatFragment"
        android:label="@string/menu_riwayat_testing"
        tools:layout="@layout/fragment_riwayat" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.tesloginnavigationdrawer.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.tesloginnavigationdrawer.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_exit"
        android:name="com.example.tesloginnavigationdrawer.ui.send.SendFragment"
        android:label="@string/menu_exit"
        tools:layout="@layout/fragment_send" />



</navigation>